# CS_AI_AI_ENGINE

./: .gitignore  Dockerfile  Makefile  build.sh  pyproject.toml
.github/workflows/: main.yml
ai_engine/: app.py
ai_engine/dynamo_db/: dynamo_db.py
ai_engine/engine/: engine.py
ai_engine/helpers/: extract_data.py
ai_engine/model/: model.py
ai_engine/models/: response_models.py  shared.py
ai_engine/related/: get_most_related.py
ai_engine/s3/: s3.py
ai_engine/seed_data/: puller.py  s3_data_puller.py
ai_engine/sns/: sns.py
ai_engine/utils/: combine_results.py
