[tool.poetry]
name = "AI Engine"
version = "0.1.0"
description = ""
authors = ["Adrian Gajewski <adrian.gajewski.projectx@gmail.com>"]
readme = "README.md"
packages = [{include = "ai_engine"}]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^1.5.1"
requests = "2.32.3"
numpy = "2.1.1"
pandas = "2.2.2"
matplotlib = "3.9.2"
seaborn = "0.13.2"
scikit-learn = "1.5.1"

[tool.poetry.dev-dependencies]
black = "^23.1.0"
boto3 = "^1.26.56"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.0.0"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.23.7"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"